--- a/api-dionysus/package.json
+++ b/api-dionysus/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "egg": "^2.15.1",
     "egg-cors": "^2.2.3",
+    "egg-redis": "^2.4.0",
     "egg-scripts": "^2.11.0",
     "egg-sequelize": "^5.2.1",
     "egg-socket.io": "^4.1.6",
