--- a/ui-dionysus/package.json
+++ b/ui-dionysus/package.json
@@ -39,6 +39,7 @@
     "vue-router": "^3.1.2",
     "vue-socket.io": "^3.0.7",
     "vue-svg-component-runtime": "^1.0.1",
+    "vue-timers": "^2.0.4",
     "vuex": "^3.1.1",
     "wangeditor": "^3.1.1"
   },
